# Import-SMS

./: .env.example  .gitignore  ARCHITECTURE.md  DELIVERABLES.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  README_telegram.md  SHIFT_REPORT_FORMAT.md  TESTING.md  TESTING_SUMMARY.md  TEST_REPORT.md  TEST_RESULTS.md  build_exe.py  create_exe.bat  db_schema.sql  dependency-report.md  docker-compose.yml  launcher.py  main.py  migrate_excel_to_sqlite.py  plavka.db  plavka_app.spec  pyproject.toml  pytest.ini  requirements.txt  run_all_tests.sh  run_journal.bat  streamlit_app.py  telegram_bot.py  telegram_import.py  validate_project.sh  Запустить_журнал.cmd
.github/workflows/: tests.yml
src/bot/handlers/: add_record.py  menu.py  start.py
src/bot/keyboards/: main_menu.py
src/bot/services/: excel.py  message_parser.py  parser.py
src/core/: config.py
tests/: conftest.py  example_shift_report.txt  test_docker.sh  test_excel_concurrent.py  test_excel_concurrent_simple.py  test_parser.py  test_report_template.md
tests/integration/: test_docker.py  test_excel_integration.py
tests/unit/: test_excel_service.py  test_handlers.py  test_message_parser.py
Контроль/: plavka.xlsx
